--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
  <html lang="en-US">
    <head> 
     <meta charset="utf-8" /> 
-   <title>My test page</title> 
+   <title>My test page</title>
+    <link rel="stylesheet" href="style.css"/>
     </head> 
    <body>
      <h1> Топ списков фильмов по моему мнению</h1>
